updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Chaotic Good Human Cat Lady</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>*Gestures vaguely behind me*</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Painting, D&D, obstacle course races, pretending I'm edgier than I am... </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Ghost Hunter</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Columbia, Maryland</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>The non-profit I work for is in need of a major tech update.</p>
     </section>
 
     <footer id="footer">
