--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <h1>Where I'm From</h1>
       <p>*Gestures vaguely behind me*</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Painting, D&D, obstacle course races, pretending I'm edgier than I am... </p>
+      <p>Painting, D&D, puzzles, obstacle course races, pretending I'm edgier than I am... </p>
       <h1>What's your dream job?</h1>
       <p>Ghost Hunter</p>
       <h1>Where do you live?</h1>
       <p>Columbia, Maryland</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>The non-profit I work for is in need of a major tech update.</p>
+      <p>If I could go back in time I would have majored in something like this. But also, the non-profit I work for is in major need of a tech update.</p>
     </section>
 
     <footer id="footer">
